fixed margin on small devices

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -363,9 +363,11 @@ h3 {
 
   .ingredients {
     width: 100%;
-    margin-left: 10vw;
+    margin-left: 7vw;
     margin-right: 10vw;
     margin-top: 20px;
+    background-color: #615E6D96;
+    padding-left: 5px;
   }
 
   .description {
@@ -382,6 +384,7 @@ h3 {
     margin-bottom: 5px;
     margin-right: 0;
     margin-left: 0;
+    margin-top: 0;
   }
 }
 
